--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -534,6 +534,14 @@ The following hierarchy is represented as a directed acyclic graph, with arrows 
   Image Selection Service & N/A & Provides algorithms \\ \hline
   \end{longtable}
 
+
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{Analysis_Class_Diagram_Model.png}
+    \caption{ML Model}
+    \label{FigUH}
+  \end{figure}
+
 %\section*{References}
 
 \section{User Interfaces}
