--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -555,9 +555,11 @@ needed. Drawings, Sketches, Figma}
 
 \section{Timeline}
 
-\wss{Schedule of tasks and who is responsible}
-
-\wss{You can point to GitHub if this information is included there}
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=1\textwidth]{timeline.png}
+  \label{FigUH}
+\end{figure}
 
 \bibliographystyle {plainnat}
 \bibliography{../../../refs/References}
